Desensitize filtered folders when in folder selection mode

https://bugzilla.gnome.org/show_bug.cgi?id=679333